opam-version: "2.0"
version: "0.4"
maintainer: "Quentin Heath <12143333+qheath@users.noreply.github.com>"
authors: "Quentin Heath <12143333+qheath@users.noreply.github.com>"
homepage: "https://github.com/qheath/jupiteri"
bug-reports: "https://github.com/qheath/jupiteri/issues"
dev-repo: "git://github.com/qheath/jupiteri.git"
license: "GPL-3"
build: [
  ["dune" "build" "-p" name "-j" jobs "@install"]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]

depends: [
  "dune" {build}
  "lambda-term" {build}
  "cmdliner" {with-test}
  "odoc" {with-doc}
]
synopsis: "IO utils"
description: """
Various input/output utilities."""
#url {
#  src: ""
#  checksum: ""
#}
